{
  "version": 4,
  "terraform_version": "0.12.3",
  "serial": 8,
  "lineage": "0dcb0d9e-af58-46d4-381b-50c4f63936b5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "swarm-master",
      "provider": "provider.aws",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02e60be79e78fef21",
            "arn": "arn:aws:ec2:ap-south-1:304370290957:instance/i-0cca922d808746638",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0cca922d808746638",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "swarmKeyPair",
            "monitoring": false,
            "primary_network_interface_id": "eni-084e2029dffc70144",
            "private_dns": "ip-172-31-28-230.ap-south-1.compute.internal",
            "private_ip": "172.31.28.230",
            "public_dns": "ec2-13-233-186-18.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.233.186.18",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0a923aa4b00d053e8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "masterSG"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-588a5131",
            "tags": {
              "Name": "swarm-master"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06fec1bac06c8fb84"
            ]
          },
          "depends_on": [
            "aws_key_pair.swarmKeyPair",
            "aws_security_group.master-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "worker-1",
      "provider": "provider.aws",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02e60be79e78fef21",
            "arn": "arn:aws:ec2:ap-south-1:304370290957:instance/i-0761f2bf952d59d68",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0761f2bf952d59d68",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "swarmKeyPair",
            "monitoring": false,
            "primary_network_interface_id": "eni-050161e488b7d448b",
            "private_dns": "ip-172-31-24-121.ap-south-1.compute.internal",
            "private_ip": "172.31.24.121",
            "public_dns": "ec2-13-232-66-164.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.232.66.164",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-07ea18e50861364eb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "workerSG"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-588a5131",
            "tags": {
              "Name": "worker-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-032f2371c9340f446"
            ]
          },
          "depends_on": [
            "aws_key_pair.swarmKeyPair",
            "aws_security_group.worker-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "worker-2",
      "provider": "provider.aws",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02e60be79e78fef21",
            "arn": "arn:aws:ec2:ap-south-1:304370290957:instance/i-06b8464745047ce4f",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-06b8464745047ce4f",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "swarmKeyPair",
            "monitoring": false,
            "primary_network_interface_id": "eni-0afc91089ba92cf78",
            "private_dns": "ip-172-31-29-145.ap-south-1.compute.internal",
            "private_ip": "172.31.29.145",
            "public_dns": "ec2-13-233-179-190.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.233.179.190",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-023b10fe6c146d256",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "workerSG"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-588a5131",
            "tags": {
              "Name": "worker-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-032f2371c9340f446"
            ]
          },
          "depends_on": [
            "aws_key_pair.swarmKeyPair",
            "aws_security_group.worker-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "master-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:304370290957:security-group/sg-06fec1bac06c8fb84",
            "description": "Security group for docker-swarm Master Node.",
            "egress": [],
            "id": "sg-06fec1bac06c8fb84",
            "ingress": [],
            "name": "masterSG",
            "name_prefix": null,
            "owner_id": "304370290957",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "masterSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-2000df49"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:304370290957:security-group/sg-032f2371c9340f446",
            "description": "Security group for docker-swarm worker nodes.",
            "egress": [],
            "id": "sg-032f2371c9340f446",
            "ingress": [],
            "name": "workerSG",
            "name_prefix": null,
            "owner_id": "304370290957",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "workerSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-2000df49"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "masterAllowSSH",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1722607422",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-06fec1bac06c8fb84",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.master-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "masterOutboundtoAll",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-523820215",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-06fec1bac06c8fb84",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "depends_on": [
            "aws_security_group.master-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workerAllowSSH",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-744498383",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-032f2371c9340f446",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.worker-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workerOutboundtoAll",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-353431215",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-032f2371c9340f446",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "depends_on": [
            "aws_security_group.worker-sg"
          ]
        }
      ]
    }
  ]
}